--- a/assets/stylesheets/application.css.scss
+++ b/assets/stylesheets/application.css.scss
@@ -1,6 +1,9 @@
 @import "bourbon/bourbon";
 @import "grid-settings";
 @import "neat/neat";
+@import "[site-name]/mixins";
+@import "[site-name]/variables";
+@import "[site-name]/typography";
 
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -18,16 +21,16 @@ time, mark, audio, video {
 	margin: 0;
 	padding: 0;
 	border: 0;
-	font-size: 100%;
-	font: inherit;
 	vertical-align: baseline;
+	text-decoration: none;
 }
+
 html, body {
 	width: 100%;
 	height: 100%;
 }
 
-ol, ul {
+ol, ul, li {
 	list-style: none;
 }
 
